--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Đình công tại Đức, 3.400 chuyến bay bị hủy",
+    "content": "Cuộc đình công kéo dài 24 giờ tại Đức vào ngày 10-3 đã dẫn đến việc hủy bỏ hơn 3.400 chuyến bay, ảnh hưởng đến khoảng 500.000 hành khách. Các sân bay lớn như Frankfurt và Berlin-Brandenburg đều bị ảnh hưởng nặng nề, với hoạt động hàng không gần như đình trệ. Công đoàn Verdi đã kêu gọi đình công nhằm yêu cầu tăng lương cho nhân viên khu vực công, nhưng chính phủ cho rằng các yêu cầu này là không khả thi về mặt tài chính.",
+    "link": "https://tuoitre.vn/dinh-cong-tai-duc-3-400-chuyen-bay-bi-huy-20250310202057434.htm",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao cuộc đình công tại Đức gây ra việc hủy chuyến bay?",
+    "answers": [
+      {
+        "text": "Do yêu cầu tăng lương của công đoàn Verdi.",
+        "correct": true
+      },
+      {
+        "text": "Vì thời tiết xấu.",
+        "correct": false
+      },
+      {
+        "text": "Do lỗi kỹ thuật của máy bay.",
+        "correct": false
+      },
+      {
+        "text": "Vì sự cố an ninh tại sân bay.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tái bản lần thứ 5 \"Học cách học\": Cẩm nang giúp mọi người học tập hiệu quả",
+    "content": "Cuốn sách \"Học cách học\" của Barbara Oakley và Terrence Sejnowski đã được tái bản lần thứ 5, khẳng định giá trị và sức hút của nó trong việc giúp người học tối ưu hóa phương pháp học tập. Kể từ khi ra mắt tại Việt Nam vào năm 2019, cuốn sách đã giúp nhiều độc giả cải thiện kỹ năng tự học và ứng dụng các phương pháp học tập hiệu quả. Nội dung sách dựa trên khoa học thần kinh và tâm lý học nhận thức, cung cấp các kỹ thuật học tập hấp dẫn và dễ áp dụng, từ đó phát triển tư duy sáng tạo cho học sinh và giáo viên.",
+    "link": "https://dantri.com.vn/giai-tri/tai-ban-lan-thu-5-hoc-cach-hoc-cam-nang-giup-moi-nguoi-hoc-tap-hieu-qua-20250310205129757.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cuốn sách \"Học cách học\" đã được tái bản mấy lần?",
+    "answers": [
+      {
+        "text": "5 lần",
+        "correct": true
+      },
+      {
+        "text": "3 lần",
+        "correct": false
+      },
+      {
+        "text": "4 lần",
+        "correct": false
+      },
+      {
+        "text": "2 lần",
+        "correct": false
+      },
+      {
+        "text": "1 lần",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lãnh đạo Greenland: \"Tổng thống Trump rất khó đoán định\"",
     "content": "Lãnh đạo Greenland, Mute Egede, đã chỉ trích Tổng thống Mỹ Donald Trump, gọi ông là một nhân vật \"rất khó đoán định\". Ông Egede cho biết sự can thiệp của Trump vào cuộc bầu cử tại Greenland là không thể chấp nhận và nhấn mạnh rằng 85% người dân Greenland không muốn trở thành một phần của Mỹ. Ông cũng khẳng định rằng tương lai của Greenland nằm trong liên minh phương Tây và cần củng cố quan hệ với các quốc gia tôn trọng họ.",
     "link": "https://dantri.com.vn/the-gioi/lanh-dao-greenland-tong-thong-trump-rat-kho-doan-dinh-20250310184022044.htm",
@@ -229,6 +287,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -255,33 +340,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -3395,6 +3453,33 @@
     ]
   },
   {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -3421,33 +3506,6 @@
       },
       {
         "text": "Một chương trình học mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -3882,33 +3940,6 @@
     ]
   },
   {
-    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
-    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
-    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
-    "answers": [
-      {
-        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
-        "correct": false
-      },
-      {
-        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng tiểu đường gây mờ mắt",
     "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
     "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
@@ -3958,6 +3989,33 @@
       },
       {
         "text": "Không, sữa chỉ tốt cho sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
+    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
+    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
+    "answers": [
+      {
+        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
+        "correct": false
+      },
+      {
+        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
         "correct": false
       }
     ]
@@ -4465,33 +4523,6 @@
     ]
   },
   {
-    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
-    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
-    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
-        "correct": true
-      },
-      {
-        "text": "Họ sản xuất xe điện thuần.",
-        "correct": false
-      },
-      {
-        "text": "Họ có nhiều mẫu xe thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ bán xe chạy bằng xăng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Genesis GV70 mới giá từ 48.000 USD",
     "content": "Genesis GV70 2025 đã được giới thiệu tại thị trường Mỹ với giá khởi điểm từ 48.000 USD. Mẫu SUV này có thiết kế ngoại thất được nâng cấp với lưới tản nhiệt táo bạo hơn và màn hình OLED 27 inch mới bên trong. Xe có hai tùy chọn động cơ: máy xăng 2.5 tăng áp 300 mã lực và động cơ V6 3.5 tăng áp 375 mã lực. Các tính năng an toàn và hỗ trợ lái cũng được cải tiến với nhiều công nghệ hiện đại.",
     "link": "https://vnexpress.net/genesis-gv70-moi-gia-tu-48-000-usd-4858748.html",
@@ -4518,6 +4549,33 @@
       },
       {
         "text": "60.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
+    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
+    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
+        "correct": true
+      },
+      {
+        "text": "Họ sản xuất xe điện thuần.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều mẫu xe thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ bán xe chạy bằng xăng.",
         "correct": false
       }
     ]
