--- a/home.html
+++ b/home.html
@@ -179,6 +179,33 @@
     ]
   },
   {
+    "title": "Toàn quốc cần xóa hơn 450 nhà tạm mỗi ngày",
+    "content": "Thủ tướng Chính phủ yêu cầu các địa phương cần xóa hơn 101.000 căn nhà tạm và dột nát trong năm nay, trung bình mỗi ngày cần hoàn thành 459 căn. Đến nay, cả nước đã hỗ trợ xây dựng 121.638 căn nhà, đạt hơn 54% mục tiêu. Tuy nhiên, một số địa phương vẫn chưa chủ động trong việc rà soát và hỗ trợ, dẫn đến chậm tiến độ. Thủ tướng nhấn mạnh cần thực hiện quyết liệt nhiệm vụ này và không để ai phải sống trong nhà tạm.",
+    "link": "https://vnexpress.net/toan-quoc-can-xoa-hon-450-nha-tam-moi-ngay-4859336.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Tại sao cần xóa hơn 450 nhà tạm mỗi ngày?",
+    "answers": [
+      {
+        "text": "Để hoàn thành mục tiêu xóa nhà tạm và dột nát trong năm nay.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng thêm nhiều nhà mới cho người dân.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm thiểu tình trạng nghèo đói ở các địa phương.",
+        "correct": false
+      },
+      {
+        "text": "Để cải thiện tình hình kinh tế của đất nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cháy lớn xưởng sản xuất sơn ở Đồng Nai",
     "content": "Vào tối ngày 10/3/2025, một vụ cháy lớn đã xảy ra tại xưởng sản xuất sơn ở xã Bình Minh, huyện Trảng Bom, Đồng Nai. Ngọn lửa bùng lên sau nhiều tiếng nổ lớn và nhanh chóng lan rộng do bên trong chứa nhiều chất dễ cháy. Mặc dù người dân và nhân viên cố gắng dập lửa nhưng không thành công. Lực lượng cứu hỏa đã được điều động đến hiện trường để khống chế đám cháy, trong khi nhiều người dân phải di dời đồ đạc do xưởng nằm cạnh khu dân cư.",
     "link": "https://vnexpress.net/chay-lon-xuong-san-xuat-son-o-dong-nai-4859343.html",
@@ -1300,33 +1327,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
     "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
     "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
@@ -1376,6 +1376,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
