--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đề nghị truy tố 17 người trong chuyên án đất đai tại Bà Rịa - Vũng Tàu",
     "content": "Cơ quan cảnh sát điều tra - Công an tỉnh Bà Rịa - Vũng Tàu đã hoàn tất kết luận điều tra và đề nghị truy tố 17 bị can liên quan đến vụ án lừa đảo, làm giả giấy tờ đất đai. Trong số này, Nguyễn Văn Thanh bị đề nghị truy tố về 3 tội danh, bao gồm lừa đảo và làm giả con dấu. Vụ án liên quan đến việc làm giả giấy tờ để bán đất, gây thiệt hại cho nạn nhân hơn 170 tỷ đồng.",
     "link": "https://tuoitre.vn/de-nghi-truy-to-17-nguoi-trong-chuyen-an-dat-dai-tai-ba-ria-vung-tau-20250310215746541.htm",
@@ -1354,33 +1381,6 @@
     ]
   },
   {
-    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
-    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
-    "answers": [
-      {
-        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ là một bệnh nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có nhưng không gây biến chứng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
     "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
     "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
@@ -1403,6 +1403,33 @@
       },
       {
         "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
+    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
+    "answers": [
+      {
+        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ là một bệnh nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có nhưng không gây biến chứng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2146,6 +2173,33 @@
     ]
   },
   {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -2172,33 +2226,6 @@
       },
       {
         "text": "4,0%/năm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
